# tpm-oop

./: Coding standard.md  input.txt  main.py  module.py  output.txt  pyproject.toml
tests/: input.txt  output.txt  output_test_sort.txt  output_test_write_game_film.txt  test_cartoon.py  test_container.py  test_documentary.py  test_film.py  test_gamefilm.py
