[tool.poetry]
name = "tpm-oop"
version = "0.1.0"
description = ""
authors = ["Vasily Perekhrest <perekhrest-vasily@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
